showing classwork section dynamically

--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -172,9 +172,7 @@
     <div class="classwork-content">
       <div class="topics-section">
         <p>All topics</p>
-        <div>
-          <p>UIX</p>
-          <p>Soft Skills</p>
+        <div id="topic_name">
         </div>
       </div>
       <div class="classwork-right">
@@ -216,59 +214,7 @@
         </div>
         <div class="topics">
           <div class="topic">
-            <div class="topic-header">
-              <div class="topic-name">UIX</div>
-              <div>
-                <i class="fa-solid fa-ellipsis-vertical"></i>
-              </div>
-            </div>
-            <div class="assignments">
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div>
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div>
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-            </div>
-          </div>
-          <div class="topic">
-            <div class="topic-header">
-              <div class="topic-name">UIX</div>
-              <div>
-                <i class="fa-solid fa-ellipsis-vertical"></i>
-              </div>
-            </div>
-            <div class="assignments">
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div>
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
-              <div class="assignment">
-                <div class="assignment-data">
-                  <div>
-                    <i class="fa-regular fa-rectangle-list fa-lg"></i>
-                  </div>
-                  <div class="assignment-name">Assignment One</div>
-                </div>
-                <div class="date">Posted 2:36PM</div>
-              </div>
+            <div id="topic-ass">
             </div>
           </div>
         </div>
