implemented the add solution to an assignment functionality

--- a/assignment.html
+++ b/assignment.html
@@ -86,6 +86,11 @@
                         <div>Your work</div>
                         <div>Assigned</div>
                     </div>
+                    <div id="image" class="file-image">
+                        <img
+                            src=""
+                            alt="">
+                    </div>
                     <form>
                         <div class="files">
                             <input type="file" style="display: none;" id="file-input">
@@ -112,6 +117,7 @@
                 </div>
             </div>
         </div>
+        <!-- <img id="my-image" src="" alt=""> -->
         <script src="front-end/js/axios.min.js"></script>
         <script src="front-end/js/script.js"></script>
         <script>
