--- a/teacher_classwork.html
+++ b/teacher_classwork.html
@@ -112,7 +112,7 @@
                             <label for="dateInput">Due</label>
                             <input type="date" id="dateInput">
                         </div>
-                        <select class="dropdown" id="topics">
+                        <select style="display: none;" class="dropdown" id="topics">
                         </select>
                     </div>
                 </div>
