--- a/forget_password.html
+++ b/forget_password.html
@@ -1,84 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./front-end/styles/index.css">
-        <link rel="stylesheet" href="./front-end/styles/signin.css">
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"/>
-        <title>Forget Password - Google Accounts</title>
-    </head>
-    <body>
-        <div class="main forgot-password-page">
-            <div class="signin-box">
-                <div class="top-signin-box">
-                    <div><img src="./front-end/assets/GoogleLogo.png" alt="Google Logo"></div>
-                    <div class="verify-heading">Verify it's you</div>
-                    <div class="user-email">
-                        <i class="fa-solid fa-user"></i>
-                        <div class="email"></div>
-                        <i class="fa-solid fa-caret-down"></i>
-                    </div>
-                </div>
-                <div class="bottom-signin-box">
-                    <div class="inputs">
-                        <div class="column">
-                            <div>
-                                <label for="fav-color">What's your lucky number?</label>
-                            </div>
-                            <div><input id="fav-color" placeholder="Enter your favourite color?" type="text"></div>
-                        </div>
-                        <p class="answer-error hide">Your answer is wrong</p>
-                        <div class="column">
-                            <div>
-                                <label for="password">Password</label>
-                            </div>
-                            <div><input required id="password" placeholder="Enter your password" type="password" disabled></div>
-                        </div>
-                        <div class="column">
-                            <div>
-                                <label for="confirm-password">Confirm Password</label>
-                            </div>
-                            <div><input
-                                required
-                                id="confirm-password"
-                                placeholder="Confirm your password"
-                                type="password"
-                                disabled></div>
-                        </div>
-                        <p class="passwords-error hide">Passwords don't match</p>
-                    </div>
-                    <div>
-                        <!-- <div class="create-account">Check</div> -->
-                        <div id="check-button" class="check-button">
-                            <button>Check</button>
-                        </div>
-                        <div id="change-password-button" class="change-password-button hide">
-                            <button>Change Password</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bottom-signin">
-                <div>English(United States)
-                    <i class="fa-solid fa-caret-down"></i>
-                </div>
-                <ul>
-                    <li>Help</li>
-                    <li>Privacy</li>
-                    <li>Terms</li>
-                </ul>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./front-end/styles/index.css" />
+    <link rel="stylesheet" href="./front-end/styles/signin.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Forget Password - Google Accounts</title>
+  </head>
+  <body>
+    <div class="main forgot-password-page">
+      <div class="signin-box">
+        <div class="top-signin-box">
+          <div>
+            <img src="./front-end/assets/GoogleLogo.png" alt="Google Logo" />
+          </div>
+          <div class="verify-heading">Verify it's you</div>
+          <div class="user-email">
+            <i class="fa-solid fa-user"></i>
+            <div class="email"></div>
+            <i class="fa-solid fa-caret-down"></i>
+          </div>
         </div>
-        <script src="front-end/js/axios.min.js"></script>
-        <script src="front-end/js/script.js"></script>
-        <script>
-            pages.loadFor("forget_password")
-        </script>
-    </body>
+        <div class="bottom-signin-box">
+          <div class="inputs">
+            <div class="column">
+              <div>
+                <label for="fav-color">What's your lucky number?</label>
+              </div>
+              <div>
+                <input
+                  id="fav-color"
+                  placeholder="Enter your lucky number?"
+                  type="text"
+                />
+              </div>
+            </div>
+            <p class="answer-error hide">Your answer is wrong</p>
+            <div class="column">
+              <div>
+                <label for="password">Password</label>
+              </div>
+              <div>
+                <input
+                  required
+                  id="password"
+                  placeholder="Enter your password"
+                  type="password"
+                  disabled
+                />
+              </div>
+            </div>
+            <div class="column">
+              <div>
+                <label for="confirm-password">Confirm Password</label>
+              </div>
+              <div>
+                <input
+                  required
+                  id="confirm-password"
+                  placeholder="Confirm your password"
+                  type="password"
+                  disabled
+                />
+              </div>
+            </div>
+            <p class="passwords-error hide">Passwords don't match</p>
+          </div>
+          <div>
+            <!-- <div class="create-account">Check</div> -->
+            <div id="check-button" class="check-button">
+              <button>Check</button>
+            </div>
+            <div
+              id="change-password-button"
+              class="change-password-button hide"
+            >
+              <button>Change Password</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-signin">
+        <div>
+          English(United States)
+          <i class="fa-solid fa-caret-down"></i>
+        </div>
+        <ul>
+          <li>Help</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </div>
+    </div>
+    <script src="front-end/js/axios.min.js"></script>
+    <script src="front-end/js/script.js"></script>
+    <script>
+      pages.loadFor("forget_password");
+    </script>
+  </body>
 </html>
